--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,19 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
+
+    // RecyclerView
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.7'
+
+    // Biometric
+    implementation "androidx.biometric:biometric-ktx:1.2.0-alpha03"
+
+    // Coil Image Loading Library
+    implementation("io.coil-kt:coil:1.2.1")
+
+    // Lottie
+    implementation 'com.airbnb.android:lottie:3.4.0'
 }
